# numWorkshop

./: license  numWorkshop.py  pyproject.toml  readme.md
.github/workflows/: pep8-pr.yml  pep8-push.yml
