[tool.poetry]
name = "numworks-workshop.py"
version = "0.1.0"
description = "Numworks workshop scraping tool"
authors = ["Evann DREUMONT <53308142+LeGmask@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
