[tool.poetry]
name = "numWorkshop"
version = "0.1.4"
description = "A python wrapper for the Numworks workshop"
authors = ["Evann DREUMONT <53308142+LeGmask@users.noreply.github.com>", "cod313 <jeandellapasta@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://workshop.numworks.com/"
repository = "https://github.com/LeGmask/numWorkshop"
keywords = ["Numworks", "workshop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
